# sylt-lang

./: .gitignore  CNAME  CONTRIBUTING.md  Cargo.toml  DESIGNDOC.md  LICENSE  Makefile  README.md  SPEC.md  TODO  build.rs  coverage.sh  example_game.sy  format_blocks.sy  formatter.sy  guide.html  index.html  love.sy  main.lua  main.sy  other.sy  quick-reference.html  random_test.py  rustfmt.toml  third.sy  time_analysis.py  todo
.github/ISSUE_TEMPLATE/: default-issue-template.md
.github/workflows/: coverage.yml  docs.yml  rust.yml  rustfmt.yml  tests.yml  warnings.yml
benches/: sylt_benchmark.rs  tihdy_benchmark.rs
docs/: 10-index.adoc  20-guide.adoc  30-quick-reference.adoc  Makefile  guide.adoc  index.adoc  insert_navbar.py  long.adoc  main.adoc  navbar.py  quick-reference.adoc  short.adoc  stylesheet.css  syntax-highlighter.rb
jordgubb/: Cargo.toml  Makefile  gfx.sy  input.sy  love.sy  main.sy  sfx.sy  sketch.rs  snake.sy  snake_ll.sy
jordgubb/src/: fs.glsl  main.rs  vs.glsl
lingon/: Cargo.toml  in_sylt.sy  main.rs
lingon/src/: fs.glsl  fs_particle.glsl  input.rs  main.rs  renderer.rs  semantics.rs  vs.glsl  vs_particle.glsl
lsp/: Cargo.toml
lsp/src/: main.rs
pong/: Cargo.toml  README  pong.tdy
pong/src/: main.rs
progs/bench/: fib.sy  fib_iter.sy  sum.sy
progs/tests/: _simple.sy  add.sy  boolean_ops.sy  boolean_order.sy  calls_inside_calls.sy  cluster.sy  compare_constants_unequality.sy  compare_variable.sy  conflict_markers.sy  conflict_markers_multiple.sy  conflict_markers_other_file.sy  constants_declaration_order.sy  constants_declaration_order_wrong.sy  expressions.sy  faulty.sy  faulty_inner_function_type.sy  faulty_list_index_assign.sy  fib.sy  field.sy  field_assign.sy  field_get.sy  float_int_compare.sy  for.sy  global_collision.sy  if_else_nested.sy  if_expr_arrow.sy  if_expr_short.sy  in_rhs.sy  infinet_iterator.sy  invalid_assign.sy  list_indexing.sy  more_types.sy  multiple_fields.sy  not.sy  nullable_types.sy  one_arg.sy  param_2.sy  passing_functions.sy  passing_functions_mixed.sy  scoping.sy  (+15 more)
progtests/blob/: non_null_fields_faulty.sy
progtests/dict/: faulty_contains.sy  simple.sy  type_declare.sy
progtests/expression/: add.sy  function_capture_two_upvalues.sy  function_exclamation_calling.sy  function_param_and_return.sy  function_wrong_params.sy  set_contains.sy  set_faulty_contains.sy
progtests/if_else/: if_expr_arrow.sy
progtests/looping/: simple.sy
progtests/typeing/: force_call.sy  force_faulty_call.sy  union_types_simple.sy
src/: ast.rs  codegen.rs  compiler.rs  error.rs  hexer.rs  lexer.rs  lib.rs  lib_sylt.rs  lingon_sylt.rs  linked.rs  main.rs  name_resolution.rs  operators.op  operators.syop  parser.rs  parser_new.rs  pramble.lua  preamble.lua  preamble.sy  rc.rs  sectionizer.rs  stack.rs  syncomp.rs  syntree.rs  tokenizer.rs  type_checker.rs  typechecker.rs  typer.rs  vm.rs
std/: basics.sy  common.sy  container.sy  dict.sy  list.sy  math.sy  maybe.sy  preamble.sy  set.sy  std.sy  unsafe.sy
sylt/: Cargo.toml  build.rs
sylt-common/: Cargo.toml
sylt-common/src/: blob.rs  block.rs  error.rs  flat_value.rs  lib.rs  op.rs  owned_value.rs  prog.rs  rc.rs  ty.rs  upvalue.rs  value.rs
sylt-compiler/: Cargo.toml
sylt-compiler/src/: bytecode.rs  compiler.rs  dependency.rs  intermediate.rs  lib.rs  lua.rs  name_resolution.rs  preamble.lua  ty.rs  typechecker.rs
sylt-formatter/: Cargo.toml  test.sy
sylt-formatter/src/: lib.rs  main.rs  parse.rs
sylt-formatter/src/parser/: expression.rs  mod.rs  module.rs  parse.rs  statement.rs  ty.rs
sylt-machine/: Cargo.toml
sylt-machine/src/: lib.rs  vm.rs
sylt-macro/: Cargo.toml
sylt-macro/src/: lib.rs  macro.rs
sylt-old/: Cargo.toml
sylt-old/docs/: .gitignore  mad_doc.py
sylt-old/src/: compiler.rs  error.rs  lib.rs  lib_sylt.rs  lingon_sylt.rs  parser.rs  typechecker.rs  vm.rs
sylt-parser/: Cargo.toml
sylt-parser/src/: expression.rs  lib.rs  parser.rs  statement.rs
sylt-std/: Cargo.toml
sylt-std/src/: lib.rs  lingon.rs  network.rs  sylt.rs
sylt-tokenizer/: Cargo.toml
sylt-tokenizer/src/: lib.rs  token.rs  tokenizer.rs
sylt-typechecker/: Cargo.toml
sylt-typechecker/src/: lib.rs  typechecker.rs
sylt/docs/: docs.css
sylt/src/: formatter.rs  lib.rs  main.rs  test.rs
sylt_macro/: Cargo.toml
sylt_macro/src/: lib.rs
tests/: calling_functions.sy  conflict_markers.sy  conflict_markers_multiple.sy  conflict_markers_other_file.sy  faulty.tdy  fib.tdy  fun.tdy  if.tdy  order-of-operations.tdy  scoping.tdy  simple.tdy  tmp.sy  variables.tdy
tests/assignment/: faulty_constant.sy  faulty_global_constant.sy  faulty_missing.sy  faulty_namespace.sy  function_self_mutating.sy  global.sy  simple.sy
tests/bench/: factorial.sy  fib.sy  fib_iter.sy  sum.sy
tests/blob/: _other_blob.sy  ambiguous_if.sy  cluster.sy  comparison.sy  complex.sy  equality.sy  faulty_generic_blobs.sy  faulty_instantiate_non_blob.sy  faulty_num_arguments.sy  field.sy  field_assign.sy  field_get.sy  field_get_faulty.sy  immutables.sy  infer.sy  instantiate.sy  multiple_fields.sy  non_null_fields_faulty.sy  null_fields.sy  null_fields_faulty.sy  ommiting_null_fields_faulty.sy  other_blob.sy  self_.sy  self_only_methods.sy  simple.sy  use_before_declare.sy  use_before_declare_other_file.sy  use_import.sy
tests/bugs/: _incorrect_import_604.sy  add_assignment_strings_577.sy  assert_precedence_355.sy  break_outside_loop_609.sy  call_function_expressions_336.sy  copy_functions_on_blobs_580.sy  do_force_void_681.sy  empty_file_314.sy  false_in_blobs_589.sy  faulty_int_division_632.sy  faulty_tuple_div_670.sy  field_access_typecrash_303.sy  funky_tuples_587.sy  if_expression_return_656.sy  ignoring_type_branches_416.sy  incorrect_import_604.sy  innter_recursion_640.sy  int_division_632.sy  invalid_start_348.sy  iterator_chaining_607.sy  missleading_blob_301.sy  modify_global_after_access_306.sy  multiple_voids_411.sy  prime_calling_608.sy  slow_parsing_293.sy  strict_statement_end_305.sy  tuple_div_670.sy  union_types_376.sy  (+2 more)
tihdy_derive/: Cargo.toml
tihdy_derive/src/: lib.rs
(+580 files in other folders)
