[package]
name = "sylt"
version = "0.1.0"
authors = ["Edvard Thörnros <edvard.thornros@gmail.com>", "Gustav Sörnäs <gustav@sornas.net>"]
edition = "2018"

[lib]
name = "sylt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.11.4"
owo-colors = { git="https://github.com/FredTheDino/owo-colors.git" }
rand = "0.8"
sylt_macro = { path = "sylt_macro" }

criterion = { version = "0.3", optional = true }

[profile.release]
lto = "thin"

[[bench]]
name = "sylt_benchmark"
harness = false
