[package]
name = "lingon"
version = "0.1.0"
authors = ["Edvard Thörnros <edvard.thornros@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# NOTE(ed): These version numbers are very precise, cargo tree is your friend.
luminance = "0.43.2"
luminance-sdl2 = "0.2.1"
luminance-windowing = "0.9.3"
luminance-derive = "0.6.1"
cgmath = "0.18.0"
stb_image = "0.2.2"
