[package]
name = "pong"
version = "0.1.0"
authors = ["Gustav Sörnäs <gustav@sornas.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "thin"

[dependencies]
tihdy = { path = ".."}
tihdy_derive = { path = "../tihdy_derive" }

macroquad = "0.2"
