[package]
name = "sylt-common"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sylt-tokenizer = { path = "../sylt-tokenizer" }
sylt_macro = { path = "../sylt_macro" }

owo-colors = { git = "https://github.com/FredTheDino/owo-colors.git" }

[dev-dependencies]
rand = "0.8" # for generating random file names for tests
