[package]
name = "sylt-common"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sylt-tokenizer = { path = "../sylt-tokenizer" }
sylt_macro = { path = "../sylt_macro" }

owo-colors = { git = "https://github.com/FredTheDino/owo-colors.git" }
serde = { version = "1", features = ["derive", "rc"] }

[dev-dependencies]
# For generating random file names for tests
sungod = { version = "0.3.1", features = ["default_is_random"] }
