[package]
name = "sylt-common"
description = """
Common denominator for the Sylt programming language crates.
"""
license = "MIT"
repository = "https://github.com/FredTheDino/sylt.git"
readme = "../README.md"
version = "0.2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sylt-tokenizer = { version = "0.2.0", path = "../sylt-tokenizer" }
sylt-macro = { version = "0.2.0", path = "../sylt-macro" }

colored = "2"

[dev-dependencies]
# For generating random file names for tests
sungod = { version = "0.3.1", features = ["default_is_random"] }

[lib]
doctest = false
