[package]
name = "sylt-compiler"
description = """
Compiler for the Sylt programming language.
"""
license = "MIT"
repository = "https://github.com/FredTheDino/sylt.git"
readme = "../README.md"
version = "0.2.0"
edition = "2018"

[lib]
path = "src/compiler.rs"
doctest = false

[dependencies]
sylt-common = { version = "0.2.0", path = "../sylt-common" }
sylt-parser = { version = "0.2.0", path = "../sylt-parser" }
