[package]
name = "sylt-compiler"
description = """
Compiler for the Sylt programming language.
"""
license = "MIT"
repository = "https://github.com/sylt-lang/sylt-lang.git"
readme = "../README.md"
version = "0.2.0"
edition = "2018"

[lib]
path = "src/compiler.rs"
doctest = false
test = false

[dependencies]
sylt-common = { version = "0.2.0", path = "../sylt-common" }
sylt-tokenizer = { version = "0.2.0", path = "../sylt-tokenizer" }
sylt-parser = { version = "0.2.0", path = "../sylt-parser" }
sylt-macro = { version = "0.2.0", path = "../sylt-macro" }
