[package]
name = "sylt-machine"
description = """
VM for running programs in the Sylt programming language.
"""
license = "MIT"
repository = "https://github.com/FredTheDino/sylt.git"
readme = "../README.md"
version = "0.2.0"
edition = "2018"

[lib]
path = "src/vm.rs"
doctest = false
test = false

[dependencies]
sylt-common = { version = "0.2.0", path = "../sylt-common" }

owo-colors = { version = "2.0.0", git = "https://github.com/FredTheDino/owo-colors.git" }
