[package]
name = "sylt-parser"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sylt-common = { path = "../sylt-common" }
sylt-tokenizer = { path = "../sylt-tokenizer" }
sylt_macro = { path = "../sylt_macro" }

