[package]
name = "sylt-parser"
description = """
Parser for the Sylt programming language.
"""
license = "MIT"
repository = "https://github.com/FredTheDino/sylt.git"
readme = "../README.md"
version = "0.1.0"
edition = "2018"

[lib]
path = "src/parser.rs"

[dependencies]
sylt-common = { version = "0.1.0", path = "../sylt-common" }
sylt-tokenizer = { version = "0.1.0", path = "../sylt-tokenizer" }
sylt-macro = { version = "0.1.0", path = "../sylt-macro" }
