[package]
name = "sylt-std"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sylt-common = { path = "../sylt-common" }
sylt_macro = { path = "../sylt_macro" }

bincode = { version = "1", optional = true }
lazy_static = "1"
lingon = { path = "../../lingon", optional = true }
owo-colors = { git = "https://github.com/FredTheDino/owo-colors.git" }

[features]
default = [ "lingon", "network" ]

network = ["bincode"]
