[package]
name = "sylt-std"
description = """
Standard library for the Sylt programming language.
"""
license = "MIT"
repository = "https://github.com/FredTheDino/sylt.git"
readme = "../README.md"
version = "0.2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sylt-common = { version = "0.2.0", path = "../sylt-common" }
sylt-macro = { version = "0.2.0", path = "../sylt-macro" }

bincode = { version = "1", optional = true }
lazy_static = "1"
lingon = { version = "0.1.0", git = "https://github.com/sornas/lingon.git", branch = "main", optional = true }
owo-colors = { version = "2.0.0", git = "https://github.com/FredTheDino/owo-colors.git" }
sungod = "0.3"

[features]
default = [ "lingon", "network" ]

network = ["bincode"]

[lib]
doctest = false
