[package]
name = "sylt-tokenizer"
description = """
Tokenizer for the Sylt programming language.
"""
license = "MIT"
repository = "https://github.com/sylt-lang/sylt-lang.git"
readme = "../README.md"
version = "0.2.0"
edition = "2018"

[lib]
path = "src/tokenizer.rs"
doctest = false

[dependencies]
logos = "0.12"
