[package]
name = "sylt-typechecker"
description = """
Typechecker for programs in the Sylt programming language.
"""
license = "MIT"
repository = "https://github.com/FredTheDino/sylt.git"
readme = "../README.md"
version = "0.2.0"
edition = "2018"

[lib]
path = "src/typechecker.rs"
doctest = false

[dependencies]
sylt-common = { version = "0.2.0", path = "../sylt-common" }

colored = "2"
