[package]
name = "sylt"
description = """
The Sylt programming language.
"""
license = "MIT"
repository = "https://github.com/FredTheDino/sylt.git"
readme = "../README.md"
version = "0.2.0"
edition = "2018"
default-run = "sylt"

[lib]
name = "sylt"
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sylt-common = { version = "0.2.0", path = "../sylt-common" }
sylt-compiler = { version = "0.2.0", path = "../sylt-compiler" }
sylt-machine = { version = "0.2.0", path = "../sylt-machine" }
sylt-macro = { version = "0.2.0", path = "../sylt-macro" }
sylt-parser = { version = "0.2.0", path = "../sylt-parser" }
sylt-std = { version = "0.2.0", path = "../sylt-std", default-features = false }
sylt-tokenizer = { version = "0.2.0", path = "../sylt-tokenizer" }
sylt-typechecker = { version = "0.2.0", path = "../sylt-typechecker" }

colored = "2"
gumdrop = "0.8"

criterion = { version = "0.3", optional = true }

[features]
lingon = [ "sylt-std/lingon" ]
network = [ "sylt-std/network" ]
default = [ "lingon", "network" ]

#[[bench]]
#name = "sylt_benchmark"
#harness = false
