[package]
name = "sylt_macro"
version = "0.1.0"
authors = ["Edvard Thörnros <edvard.thornros@gmail.com", "Gustav Sörnäs <gustav@sornas.net>"]
edition = "2018"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0", features=["full"] }
quote = "1.0"
lazy_static = "1.4"
